further revisions to banking and means results

--- a/app/views/means-result.html
+++ b/app/views/means-result.html
@@ -52,33 +52,33 @@
               <tbody class="govuk-c-table__body">
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell">Main dwelling</td>
-                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£5,999.00</td>
+                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£0.00</td>
                   <td class="govuk-c-table__cell"style="text-align:right"><a href="">Outstanding</a></td>
                 </tr>
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell">Additional property</td>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£0.00</td>
-                  <td class="govuk-c-table__cell"style="text-align:right"></td>
+                  <td class="govuk-c-table__cell"style="text-align:right"><a href="">Outstanding</a></td>
                 </tr>
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell">Land</td>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£0.00</td>
-                  <td class="govuk-c-table__cell"style="text-align:right"></td>
+                  <td class="govuk-c-table__cell"style="text-align:right"><a href="">Outstanding</a></td>
                 </tr>
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell">Timeshare</td>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£0.00</td>
-                  <td class="govuk-c-table__cell"style="text-align:right"></td>
+                  <td class="govuk-c-table__cell"style="text-align:right"><a href="">Outstanding</a></td>
                 </tr>
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell">Bank accounts</td>
-                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£0.00</td>
-                  <td class="govuk-c-table__cell"style="text-align:right"></td>
+                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£470.00</td>
+                  <td class="govuk-c-table__cell"style="text-align:right"><a href="">Verified</a></td>
                 </tr>
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell">Third-party bank accounts</td>
-                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£0.00</td>
-                  <td class="govuk-c-table__cell"style="text-align:right"></td>
+                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£1400.00</td>
+                  <td class="govuk-c-table__cell"style="text-align:right"><a href="">Verified</a></td>
                 </tr>
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell">Investments</td>
@@ -93,46 +93,46 @@
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell">Shares</td>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£0.00</td>
-                  <td class="govuk-c-table__cell"style="text-align:right"></td>
+                  <td class="govuk-c-table__cell"style="text-align:right">N/A</td>
                 </tr>
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell">Policies</td>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£0.00</td>
-                  <td class="govuk-c-table__cell"style="text-align:right"></td>
+                  <td class="govuk-c-table__cell"style="text-align:right">N/A</td>
                 </tr>
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell">Wills</td>
-                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£14,212.10</td>
-                  <td class="govuk-c-table__cell"style="text-align:right"><a href="">Outstanding</a></td>
+                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£0.00</td>
+                  <td class="govuk-c-table__cell"style="text-align:right">N/A</td>
                 </tr>
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell">Valuable possessions</td>
-                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£1000.00</td>
-                  <td class="govuk-c-table__cell"style="text-align:right"><a href="">Pending</a></td>
+                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£0.00</td>
+                  <td class="govuk-c-table__cell"style="text-align:right">N/A</td>
                 </tr>
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell">Motor vehicles</td>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£0.00</td>
-                  <td class="govuk-c-table__cell"style="text-align:right"></td>
+                  <td class="govuk-c-table__cell"style="text-align:right">N/A</td>
                 </tr>
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell">Money due</td>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£0.00</td>
-                  <td class="govuk-c-table__cell"style="text-align:right"></td>
+                  <td class="govuk-c-table__cell"style="text-align:right">N/A</td>
                 </tr>
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell">Other capital</td>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£0.00</td>
-                  <td class="govuk-c-table__cell"style="text-align:right"></td>
+                  <td class="govuk-c-table__cell"style="text-align:right">N/A</td>
                 </tr>
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell" style="border-width:thick;">Trusts</td>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric" style="border-width:thick;">£0.00</td>
-                  <td class="govuk-c-table__cell" style="border-width:thick;"></td>
+                  <td class="govuk-c-table__cell" style="border-width:thick; text-align:right">N/A</td>
                 </tr>
                 <tr class="govuk-c-table__row">
                   <th class="govuk-c-table__header" style="border-width:thick;">Total capital</th>
-                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric" style="border-width:thick;">£24,534.45</td>
+                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric" style="border-width:thick;">£1,870.00</td>
                   <td class="govuk-c-table__cell" style="border-width:thick;"></td>
                 </tr>
                 <tr class="govuk-c-table__row">
@@ -157,37 +157,37 @@
               <tbody class="govuk-c-table__body">
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell">Total gross wage</td>
-                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£20,100.00</td>
-                  <td class="govuk-c-table__cell"style="text-align:right"><a href="">Pending</a></td>
+                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£2,245.00</td>
+                  <td class="govuk-c-table__cell"style="text-align:right"><a href="">Verified</a></td>
                 </tr>
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell">Total benefits</td>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£0.00</td>
-                  <td class="govuk-c-table__cell"style="text-align:right"></td>
+                  <td class="govuk-c-table__cell"style="text-align:right"><a href="">Verified</a></td>
                 </tr>
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell">Maintenance</td>
-                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£7,000.00</td>
+                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£250.00</td>
                   <td class="govuk-c-table__cell"style="text-align:right"><a href="">Verified</a></td>
                 </tr>
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell">Financial support</td>
-                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£3,000.00</td>
-                  <td class="govuk-c-table__cell"style="text-align:right"><a href="">Pending</a></td>
+                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£0.00</td>
+                  <td class="govuk-c-table__cell"style="text-align:right"><a href="">Verified</a></td>
                 </tr>
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell">Total other income</td>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£0.00</td>
-                  <td class="govuk-c-table__cell"style="text-align:right"></td>
+                  <td class="govuk-c-table__cell"style="text-align:right"><a href="">Verified</a></td>
                 </tr>
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell" style="border-width:thick;">Redundancy income</td>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric" style="border-width:thick;">£0.00</td>
-                  <td class="govuk-c-table__cell" style="border-width:thick;"></td>
+                  <td class="govuk-c-table__cell" style="border-width:thick;"><a href="">Verified</a></td>
                 </tr>
                 <tr class="govuk-c-table__row">
                   <th class="govuk-c-table__header" style="border-width:thick;">Gross income</th>
-                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric" style="border-width:thick;">£30,100.00</td>
+                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric" style="border-width:thick;">£2,495.00</td>
                   <td class="govuk-c-table__cell" style="border-width:thick;"></td>
                 </tr>
                 <tr class="govuk-c-table__row">
@@ -212,52 +212,52 @@
               <tbody class="govuk-c-table__body">
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell">PAYE + NI</td>
-                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£4,020.00</td>
+                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£0.00</td>
                   <td class="govuk-c-table__cell"style="text-align:right"><a href="">Pending</a></td>
                 </tr>
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell">Employment expenses</td>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£0.00</td>
-                  <td class="govuk-c-table__cell"style="text-align:right"></td>
+                  <td class="govuk-c-table__cell"style="text-align:right">N/A</td>
                 </tr>
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell">Child care</td>
-                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£9,800.00</td>
+                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£600.00</td>
                   <td class="govuk-c-table__cell"style="text-align:right"><a href="">Verified</a></td>
                 </tr>
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell">Dependants allowance</td>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£0.00</td>
-                  <td class="govuk-c-table__cell"style="text-align:right"></td>
+                  <td class="govuk-c-table__cell"style="text-align:right"><a href="">Verified</a></td>
                 </tr>
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell">Maintenance out</td>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£0.00</td>
-                  <td class="govuk-c-table__cell"style="text-align:right"></td>
+                  <td class="govuk-c-table__cell"style="text-align:right"><a href="">Verified</a></td>
                 </tr>
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell">Housing costs</td>
-                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£0.00</td>
-                  <td class="govuk-c-table__cell"style="text-align:right"></td>
+                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£1200.00</td>
+                  <td class="govuk-c-table__cell"style="text-align:right"><a href="">Verified</a></td>
                 </tr>
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell" style="border-width:thick;">Criminal legal aid</td>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric" style="border-width:thick;">£0.00</td>
-                  <td class="govuk-c-table__cell" style="border-width:thick;"></td>
+                  <td class="govuk-c-table__cell" style="border-width:thick;"><a href="">Verified</a></td>
                 </tr>
                 <tr class="govuk-c-table__row">
                   <th class="govuk-c-table__header" style="border-width:thick;">Total deductions</th>
-                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric" style="border-width:thick;">£13,820.00</td>
+                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric" style="border-width:thick;">£1,800.00</td>
                   <td class="govuk-c-table__cell" style="border-width:thick;"></td>
                 </tr>
                 <tr class="govuk-c-table__row">
                   <th class="govuk-c-table__header" style="border-width:thick;">Total disposable income</th>
-                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric" style="border-width:thick;">£2460.00</td>
+                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric" style="border-width:thick;">£695.00</td>
                   <td class="govuk-c-table__cell" style="border-width:thick;"></td>
                 </tr>
                 <tr class="govuk-c-table__row">
                   <th class="govuk-c-table__header" style="border-width:thick;">Disposable income limit</th>
-                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric" style="border-width:thick;">£0.00</td>
+                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric" style="border-width:thick;">£733.00</td>
                   <td class="govuk-c-table__cell" style="border-width:thick;"></td>
                 </tr>
             </table>
@@ -267,10 +267,8 @@
           <input class="govuk-c-button" type="submit" value="Continue">
 
         </form>
-
       </div>
     </div>
-
   </main>
 </div>
 
