--- a/app/views/bank-success.html
+++ b/app/views/bank-success.html
@@ -44,20 +44,20 @@
               <tr class="govuk-c-table__row">
                 <td class="govuk-c-table__cell">Togetherbank Current account</td>
                 <td class="govuk-c-table__cell govuk-c-table__cell--numeric">123456789</td>
-                <td class="govuk-c-table__cell govuk-c-table__header--numeric"><a href="">43-54-22</a></td>
-                <td class="govuk-c-table__cell govuk-c-table__header--numeric"><a href="">£470.00</a></td>
+                <td class="govuk-c-table__cell govuk-c-table__header--numeric">43-54-22</td>
+                <td class="govuk-c-table__cell govuk-c-table__header--numeric">£470.00</td>
               </tr>
               <tr class="govuk-c-table__row">
                 <td class="govuk-c-table__cell">Togetherbank Savings account</td>
                 <td class="govuk-c-table__cell govuk-c-table__cell--numeric">987654321</td>
-                <td class="govuk-c-table__cell govuk-c-table__header--numeric"><a href="">43-54-22</a></td>
-                <td class="govuk-c-table__cell govuk-c-table__header--numeric"><a href="">£1400.00</a></td>
+                <td class="govuk-c-table__cell govuk-c-table__header--numeric">43-54-22</td>
+                <td class="govuk-c-table__cell govuk-c-table__header--numeric">£1400.00</td>
               </tr>
               <tr class="govuk-c-table__row">
                 <td class="govuk-c-table__cell">Togetherbank Cash ISA</td>
                 <td class="govuk-c-table__cell govuk-c-table__cell--numeric">248163264</td>
-                <td class="govuk-c-table__cell govuk-c-table__header--numeric"><a href="">43-54-22</a></td>
-                <td class="govuk-c-table__cell govuk-c-table__header--numeric"><a href="">£0.00</a></td>
+                <td class="govuk-c-table__cell govuk-c-table__header--numeric">43-54-22</td>
+                <td class="govuk-c-table__cell govuk-c-table__header--numeric">£0.00</td>
               </tr>
             </tbody>
           </table>
