yet more cosmetic changes

--- a/app/views/dwpconf.html
+++ b/app/views/dwpconf.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %} {% block page_title %} Evidence submission prototype  {% endblock %} {% block content %}
+{% extends "layout.html" %} {% block page_title %} Evidence submission prototype {% endblock %} {% block content %}
 
 <div class="govuk-o-width-container">
 
@@ -20,7 +20,7 @@
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
         <h1 class="govuk-heading-xl">
-          We found these details
+          Is this correct?
         </h1>
 
         <!-- only add a heading for a list if there is more than one list -->
