--- a/app/views/obbank.html
+++ b/app/views/obbank.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %} {% block page_title %} Evidence submission prototype  {% endblock %} {% block content %}
+{% extends "layout.html" %} {% block page_title %} Evidence submission prototype {% endblock %} {% block content %}
 
 <head>
 
@@ -179,7 +179,7 @@
         <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
           <h1 class="govuk-heading-xl">
-          Who do you bank with?
+          Choose your bank
           </h1>
 
           <form class="form" id="bankForm" action="/bank-success" method="get">
@@ -353,6 +353,7 @@
           </div>
         </form>
         <br>
+
         <button id="approve" type="button">Next</button>
 
         <div class="modal-footer" style="background-color:#f1f1f1">
