--- a/app/views/dwpdetails.html
+++ b/app/views/dwpdetails.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %} {% block page_title %} Evidence submission prototype  {% endblock %} {% block content %}
+{% extends "layout.html" %} {% block page_title %} Evidence submission prototype {% endblock %} {% block content %}
 
 <div class="govuk-o-width-container">
 
@@ -21,7 +21,7 @@
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
         <h1 class="govuk-heading-xl">
-          Your NI Number and Date of Birth
+          Enter your National Insurance number and date of birth
         </h1>
 
         <form class="form" action="/dwpconf" method="post">
