--- a/app/views/empstatus.html
+++ b/app/views/empstatus.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %} {% block page_title %} QEvidence submission prototype  {% endblock %} {% block content %}
+{% extends "layout.html" %} {% block page_title %} QEvidence submission prototype {% endblock %} {% block content %}
 
 <div class="govuk-o-width-container">
 
@@ -20,7 +20,7 @@
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
         <h2 class="govuk-heading-xl">
-          What are the details of your employment status?
+          Employment details
         </h2>
         <form class="form" action="/identify-evidence" method="get">
 
@@ -28,8 +28,7 @@
           <div class="govuk-c-radios">
             <fieldset class="govuk-c-fieldset">
               <legend class="govuk-c-fieldset__legend">
-                <h1 class="govuk-heading-m">Are you presently employed?</h1>
-                <span class="govuk-c-fieldset__hint">This includes part time or self employment</span>
+                <h1 class="govuk-heading-m">Are you employed?</h1>
               </legend>
               <div class="govuk-c-radios__item">
                 <input class="govuk-c-radios__input" id="employed-1" name="employed" type="radio" value="yes" required>
@@ -49,8 +48,7 @@
           <div class="govuk-c-radios">
             <fieldset class="govuk-c-fieldset">
               <legend class="govuk-c-fieldset__legend">
-                <h1 class="govuk-heading-m">Do you recieve any benefits from the state?</h1>
-                <span class="govuk-c-fieldset__hint">This includes Universal credit, housing benefit and disability benefits</span>
+                <h1 class="govuk-heading-m">Do you get any benefits?</h1>
               </legend>
               <div class="govuk-c-radios__item">
                 <input class="govuk-c-radios__input" id="benefits-1" name="benefits" type="radio" value="yes" required>
@@ -70,8 +68,7 @@
           <div class="govuk-c-radios">
             <fieldset class="govuk-c-fieldset">
               <legend class="govuk-c-fieldset__legend">
-                <h1 class="govuk-heading-m">Have you revieved a redundancy payment in the last calender month?</h1>
-                <span class="govuk-c-fieldset__hint">This includes payments for jobs that you are currently serving notice for</span>
+                <h1 class="govuk-heading-m">Have you been paid redundancy in the last month?</h1>
               </legend>
               <div class="govuk-c-radios__item">
                 <input class="govuk-c-radios__input" id="redundancy-1" name="redundancy" type="radio" value="yes" required>
