--- a/app/views/obexpress.html
+++ b/app/views/obexpress.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %} {% block page_title %} Evidence submission prototype  {% endblock %} {% block content %}
+{% extends "layout.html" %} {% block page_title %} Evidence submission prototype {% endblock %} {% block content %}
 
 <div class="govuk-o-width-container">
 
@@ -12,42 +12,49 @@
     </p>
   </div>
 
-  <a class="govuk-c-back-link" href="/generic-start">Back</a>
+  <a class="govuk-c-back-link" href="/civil-start">Back</a>
 
   <main role="main" class="govuk-o-main-wrapper">
+    <div>
+      <div class="govuk-o-grid">
+        <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
-    <div class="govuk-o-grid">
-      <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
+          <h1 class="govuk-heading-xl">
+            We need evidence to support your assessment
+          </h1>
 
-        <form class="form" action="/obconsent" method="get">
+          <p class="govuk-body">To complete your assessment application we need to know how much you earn, how much you spend, and whether you’re getting any benefits.</p>
 
-          <div class="govuk-c-radios">
-            <fieldset class="govuk-c-fieldset">
-              <legend class="govuk-c-fieldset__legend">
-                <h1 class="govuk-heading-xl">Can we collect means assessment evidence information about you?</h1>
-                <span class="govuk-c-fieldset__hint">This will involve automated evidence collection from your bank, HMRC and the Department of Work and Pensions</span>
-              </legend>
-              <div class="govuk-c-radios__item">
-                <input class="govuk-c-radios__input" id="evidence-information-1" name="evidenceInformation" type="radio" value="yes">
-                <label class="govuk-c-label govuk-c-radios__label" for="evidence-information-1">
-                  Yes
-                </label>
-              </div>
-              <div class="govuk-c-radios__item">
-                <input class="govuk-c-radios__input" id="evidence-information-2" name="evidenceInformation" type="radio" value="no" required>
-                <label class="govuk-c-label govuk-c-radios__label" for="evidence-information-2">
-                  No
-                </label>
-              </div>
-            </fieldset>
-          </div>
-          <input class="govuk-c-button" type="submit" value="Continue">
+          <p class="govuk-body">To collect some of the evidence we need to connect to your bank and other government departments.</p>
 
-        </form>
+          <p class="govuk-body">Evidence we can collect for means assessment:</p>
+
+          <ul class="govuk-list govuk-list--bullet">
+            <li>How much you earn (income)</li>
+            <li>Any Childcare payments</li>
+            <li>Private Pension</li>
+            <li>Employer pension</li>
+            <li>Board or rent payments</li>
+            <li>Maintainance payments</li>
+            <li>Housing costs</li>
+          </ul>
+
+          <p class="govuk-body">Evidence we can collect for capital assessment:</p>
+
+          <ul class="govuk-list govuk-list--bullet">
+            <li>Bank savings</li>
+            <li>Bank or building society account balance</li>
+            <li>ISA held at your bank</li>
+          </ul>
+
+        </div>
 
       </div>
+
+      <a class="govuk-c-button govuk-c-button" href="/obconsent" role="button">Continue</a>
+
     </div>
-  </main>
 </div>
+</main>
 
 {% endblock %}
