add step count + move back button on all pages

--- a/app/views/capital-assets.html
+++ b/app/views/capital-assets.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %} {% block page_title %} Evidence submission prototype  {% endblock %} {% block content %}
+{% extends "layout.html" %} {% block page_title %} Evidence submission prototype {% endblock %} {% block content %}
 
 <div class="govuk-o-width-container">
 
@@ -12,9 +12,9 @@
     </p>
   </div>
 
-  <a class="govuk-c-back-link" href="/benefits-kind">Back</a>
-
   <main role="main" class="govuk-o-main-wrapper">
+
+    <p class="govuk-body"><b>Step 13 of 16</b></p>
 
     <div class="govuk-o-grid">
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
@@ -49,7 +49,8 @@
             </fieldset>
           </div>
 
-          <input class="govuk-c-button" type="submit" value="Continue">
+          <input class="govuk-c-button" type="submit" value="Continue">&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="govuk-c-back-link" href="/benefits-kind">Back</a>
 
         </form>
 
