--- a/app/views/dwpconf.html
+++ b/app/views/dwpconf.html
@@ -12,9 +12,9 @@
     </p>
   </div>
 
-  <a class="govuk-c-back-link" href="/dwpdetails">Back</a>
-
   <main role="main" class="govuk-o-main-wrapper">
+
+    <p class="govuk-body"><b>Step 7 of 16</b></p>
 
     <div class="govuk-o-grid">
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
@@ -23,15 +23,10 @@
           Is this correct?
         </h1>
 
-        <!-- only add a heading for a list if there is more than one list -->
         <h2 class="govuk-heading-m">
           Personal details
         </h2>
 
-        <!-- use additional modifier class to change column widths for multiple groups of questions and answers: -->
-        <!--   * `cya-questions-short` for short questions -->
-        <!--   * `cya-questions-long` for long questions -->
-        <!--   * none for single group of q&a -->
         <dl class="govuk-check-your-answers cya-questions-short">
           <div>
             <dt class="cya-question">
@@ -76,16 +71,14 @@
           </div>
         </dl>
 
-
         <h2 class="govuk-heading-m">Now confirm your details</h2>
 
         <p class="govuk-body">
           By submitting this notification you are confirming that, to the best of your knowledge, the details you are providing are correct.
         </p>
 
-        <div class="form-group">
-          <a href="/eviconf" class="govuk-c-button">Continue</a>
-        </div>
+        <a href="/eviconf" class="govuk-c-button">Continue</a>&nbsp;&nbsp;&nbsp;&nbsp;
+        <a class="govuk-c-back-link" href="/dwpdetails">Back</a>
 
       </div>
     </div>
