--- a/app/views/eviconf.html
+++ b/app/views/eviconf.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %} {% block page_title %} Evidence submission prototype  {% endblock %} {% block content %}
+{% extends "layout.html" %} {% block page_title %} Evidence submission prototype {% endblock %} {% block content %}
 
 <div class="govuk-o-width-container">
 
@@ -12,9 +12,10 @@
     </p>
   </div>
 
-  <a class="govuk-c-back-link" href="/dwpconf">Back</a>
-
   <main role="main" class="govuk-o-main-wrapper">
+
+    <p class="govuk-body"><b>Step 8 of 16</b></p>
+
     <div>
       <div class="govuk-o-grid">
         <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
@@ -53,7 +54,8 @@
 
       </div>
 
-      <a class="govuk-c-button govuk-c-button" href="/empstatus" role="button">Continue</a>
+      <a class="govuk-c-button govuk-c-button" href="/empstatus" role="button">Continue</a>&nbsp;&nbsp;&nbsp;&nbsp;
+      <a class="govuk-c-back-link" href="/dwpconf">Back</a>
 
     </div>
 </div>
