--- a/app/views/means-result.html
+++ b/app/views/means-result.html
@@ -14,9 +14,9 @@
     </p>
   </div>
 
-  <a class="govuk-c-back-link" href="/valuables">Back</a>
-
   <main role="main" class="govuk-o-main-wrapper">
+
+    <p class="govuk-body"><b>Step 15 of 16</b></p>
 
     <div class="govuk-o-grid">
       <div class="govuk-o-grid__item govuk-o-grid__item">
@@ -264,7 +264,8 @@
           </div>
           </br>
 
-          <input class="govuk-c-button" type="submit" value="Continue">
+          <input class="govuk-c-button" type="submit" value="Continue">&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="govuk-c-back-link" href="/valuables">Back</a>
 
         </form>
       </div>
