--- a/app/views/obbank.html
+++ b/app/views/obbank.html
@@ -171,9 +171,9 @@
       </p>
     </div>
 
-    <a class="govuk-c-back-link" href="/obexpress">Back</a>
-
     <main role="main" class="govuk-o-main-wrapper">
+
+      <p class="govuk-body"><b>Step 4 of 16</b></p>
 
       <div class="govuk-o-grid">
         <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
@@ -230,7 +230,9 @@
               </fieldset>
             </div>
 
-            <input class="govuk-c-button" id="myBtn" value="Continue" onclick="setTimeout(modalOpen, 1000)" style="width:auto;" readonly>
+            <input class="govuk-c-button" id="myBtn" value="Continue" onclick="setTimeout(modalOpen, 1000)" style="width:auto;" readonly>&nbsp;&nbsp;&nbsp;&nbsp;
+            <a class="govuk-c-back-link" href="/obconsent">Back</a>
+
           </form>
         </div>
       </div>
