--- a/app/views/bank-success.html
+++ b/app/views/bank-success.html
@@ -18,6 +18,8 @@
 
   <main role="main" class="govuk-o-main-wrapper">
 
+    <p class="govuk-body"><b>Step 5 of 16</b></p>
+
     <div class="govuk-o-grid">
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
@@ -64,7 +66,8 @@
           <br>
           <p class="govuk-body">Connect to HMRC and DWP to submit evidence about tax and any benefits.</p>
 
-          <a class="govuk-c-button govuk-c-button" href="/dwpdetails" role="button">Continue</a>
+          <a class="govuk-c-button govuk-c-button" href="/dwpdetails" role="button">Continue</a>&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="govuk-c-back-link" href="/obbank">Back</a>
 
         </div>
 
