--- a/app/views/benefits-kind.html
+++ b/app/views/benefits-kind.html
@@ -12,9 +12,9 @@
     </p>
   </div>
 
-  <a class="govuk-c-back-link" href="/check-evidence">Back</a>
-
   <main role="main" class="govuk-o-main-wrapper">
+
+    <p class="govuk-body"><b>Step 12 of 16</b></p>
 
     <div class="govuk-o-grid">
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
@@ -49,7 +49,8 @@
             </fieldset>
           </div>
 
-          <input class="govuk-c-button" type="submit" value="Continue">
+          <input class="govuk-c-button" type="submit" value="Continue">&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="govuk-c-back-link" href="/check-evidence">Back</a>
 
         </form>
       </div>
