--- a/app/views/dwpdetails.html
+++ b/app/views/dwpdetails.html
@@ -12,9 +12,9 @@
     </p>
   </div>
 
-  <a class="govuk-c-back-link" href="/obbank">Back</a>
-
   <main role="main" class="govuk-o-main-wrapper">
+
+    <p class="govuk-body"><b>Step 6 of 16</b></p>
 
     <div class="govuk-o-grid">
 
@@ -61,7 +61,9 @@
               </div>
             </div>
           </fieldset>
-          <input class="govuk-c-button" type="submit" value="Continue">
+
+          <input class="govuk-c-button" type="submit" value="Continue">&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="govuk-c-back-link" href="/bank-success">Back</a>
 
         </form>
 
