--- a/app/views/empstatus.html
+++ b/app/views/empstatus.html
@@ -12,9 +12,9 @@
     </p>
   </div>
 
-  <a class="govuk-c-back-link" href="./eviconf">Back</a>
-
   <main role="main" class="govuk-o-main-wrapper">
+
+    <p class="govuk-body"><b>Step 9 of 16</b></p>
 
     <div class="govuk-o-grid">
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
@@ -84,7 +84,8 @@
               </div>
             </fieldset>
           </div>
-          <input class="govuk-c-button" type="submit" value="Continue">
+          <input class="govuk-c-button" type="submit" value="Continue">&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="govuk-c-back-link" href="./eviconf">Back</a>
         </form>
       </div>
     </div>
