--- a/app/views/generic-start.html
+++ b/app/views/generic-start.html
@@ -18,6 +18,8 @@
 
   <main role="main" class="govuk-o-main-wrapper">
 
+    <p class="govuk-body"><b>Step 1 of 16</b></p>
+
     <div class="govuk-o-grid">
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
