--- a/app/views/mandatory-evidence.html
+++ b/app/views/mandatory-evidence.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %} {% block page_title %} Evidence submission prototype  {% endblock %} {% block content %}
+{% extends "layout.html" %} {% block page_title %} Evidence submission prototype {% endblock %} {% block content %}
 
 <div class="govuk-o-width-container">
 
@@ -12,9 +12,9 @@
     </p>
   </div>
 
-  <a class="govuk-c-back-link" href="/means-result">Back</a>
-
   <main role="main" class="govuk-o-main-wrapper">
+
+    <p class="govuk-body"><b>Step 16 of 16</b></p>
 
     <div class="govuk-o-grid">
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
@@ -32,6 +32,9 @@
           <input class="govuk-c-checkboxes__input" id="confirm" name="confirm" type="checkbox" required>
           <label class="govuk-c-label govuk-c-checkboxes__label" for="confirm">Please confirm that you have read and understood the above by ticking this box</label>
         </div>
+
+        <a class="govuk-c-back-link" href="/means-result">Back</a>
+
       </div>
     </div>
   </main>
