--- a/app/views/obexpress.html
+++ b/app/views/obexpress.html
@@ -12,12 +12,12 @@
     </p>
   </div>
 
-  <a class="govuk-c-back-link" href="/civil-start">Back</a>
-
   <main role="main" class="govuk-o-main-wrapper">
     <div>
       <div class="govuk-o-grid">
         <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
+
+          <p class="govuk-body"><b>Step 2 of 16</b></p>
 
           <h1 class="govuk-heading-xl">
             We need evidence to support your assessment
@@ -51,7 +51,8 @@
 
       </div>
 
-      <a class="govuk-c-button govuk-c-button" href="/obconsent" role="button">Continue</a>
+      <a class="govuk-c-button govuk-c-button" href="/obconsent" role="button">Continue</a> &nbsp;&nbsp;&nbsp;&nbsp;
+      <a class=" govuk-c-back-link " href="/civil-start ">Back</a>
 
     </div>
 </div>
