--- a/app/views/identify-evidence.html
+++ b/app/views/identify-evidence.html
@@ -2,6 +2,72 @@
 
 <script src="/public/javascripts/jquery-1.11.3.js"></script>
 
+<style>
+  /* Can't get the gov.uk checkbox to appear in the table so create
+  a replica here */
+
+  .container {
+    display: block;
+    position: relative;
+    padding-left: 35px;
+    margin-bottom: 12px;
+    cursor: pointer;
+    font-size: 22px;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+  }
+
+  /* Hide the browser's default checkbox */
+
+  .container input {
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+  }
+
+  /* Create a custom checkbox */
+
+  .checkmark {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 25px;
+    width: 25px;
+    background-color: #0000;
+    border: solid black;
+  }
+
+  /* Create the checkmark/indicator (hidden when not checked) */
+
+  .checkmark:after {
+    content: "";
+    position: absolute;
+    display: none;
+  }
+
+  /* Show the checkmark when checked */
+
+  .container input:checked~.checkmark:after {
+    display: block;
+  }
+
+  /* Style the checkmark/indicator */
+
+  .container .checkmark:after {
+    left: 9px;
+    top: 5px;
+    width: 5px;
+    height: 10px;
+    border: solid black;
+    border-width: 0 3px 3px 0;
+    -webkit-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    transform: rotate(45deg);
+  }
+</style>
+
 <div class="govuk-o-width-container">
 
   <div class="govuk-c-phase-banner">
@@ -45,18 +111,7 @@
                   <td class="govuk-c-table__cell">Nando’s Chicken</td>
                   <td class="govuk-c-table__cell"></td>
                   <td class="govuk-c-table__cell">£12.40</td>
-                  <td style="text-align: center; vertical-align: middle;" class="govuk-c-table__cell"><input type="checkbox" id="name1" style="
-
-                    -webkit-box-sizing: border-box;
-                            box-sizing: border-box;
-                    top: 0;
-                    left: 0;
-                    width: em(40px, 19px);
-                    height: em(40px, 19px);
-                    border: $govuk-border-width-form-element solid $govuk-text-colour;
-                    background: transparent;
-
-                      cursor: pointer;" />&nbsp;</td>
+                  <td style="text-align: middle; vertical-align: middle;" class="govuk-c-table__cell"><label class="container">&nbsp;<input type="checkbox"><span class="checkmark"></span></td>
                 </tr>
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell" id="item">
@@ -87,7 +142,7 @@
                   <td class="govuk-c-table__cell">Halifax Mortgage</td>
                   <td class="govuk-c-table__cell"></td>
                   <td class="govuk-c-table__cell">£1200.00</td>
-                  <td style="text-align: center; vertical-align: middle;" class="govuk-c-table__cell"><input type="checkbox" name="name2" />&nbsp; </td>
+                  <td style="text-align: center; vertical-align: middle;" class="govuk-c-table__cell"><label class="container">&nbsp;<input type="checkbox"><span class="checkmark"></span></td>
                 </tr>
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell" id="item">
@@ -118,7 +173,7 @@
                   <td class="govuk-c-table__cell">Cash machine withdrawal</td>
                   <td class="govuk-c-table__cell"></td>
                   <td class="govuk-c-table__cell">£50.00</td>
-                  <td style="text-align: center; vertical-align: middle;" class="govuk-c-table__cell"><input type="checkbox" name="name3" />&nbsp; </td>
+                  <td style="text-align: center; vertical-align: middle;" class="govuk-c-table__cell"><label class="container">&nbsp;<input type="checkbox"><span class="checkmark"></span></td>
                 </tr>
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell" id="item">
@@ -149,7 +204,7 @@
                   <td class="govuk-c-table__cell">Wiggly-tots Nursery</td>
                   <td class="govuk-c-table__cell"></td>
                   <td class="govuk-c-table__cell">£600.00</td>
-                  <td style="text-align: center; vertical-align: middle;" class="govuk-c-table__cell"><input type="checkbox" name="name4" />&nbsp; </td>
+                  <td style="text-align: center; vertical-align: middle;" class="govuk-c-table__cell"><label class="container">&nbsp;<input type="checkbox"><span class="checkmark"></span></td>
                 </tr>
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell" id="item">
@@ -180,7 +235,7 @@
                   <td class="govuk-c-table__cell">Tesco Express</td>
                   <td class="govuk-c-table__cell"></td>
                   <td class="govuk-c-table__cell">£12.40</td>
-                  <td style="text-align: center; vertical-align: middle;" class="govuk-c-table__cell"><input type="checkbox" name="name5" />&nbsp; </td>
+                  <td style="text-align: center; vertical-align: middle;" class="govuk-c-table__cell"><label class="container">&nbsp;<input type="checkbox"><span class="checkmark"></span></td>
                 </tr>
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell" id="item">
@@ -211,7 +266,7 @@
                   <td class="govuk-c-table__cell">Child Support</td>
                   <td class="govuk-c-table__cell">£250.00</td>
                   <td class="govuk-c-table__cell"></td>
-                  <td style="text-align: center; vertical-align: middle;" class="govuk-c-table__cell"><input type="checkbox" name="name6" />&nbsp; </td>
+                  <td style="text-align: center; vertical-align: middle;" class="govuk-c-table__cell"><label class="container">&nbsp;<input type="checkbox"><span class="checkmark"></span></td>
                 </tr>
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell" id="item">
@@ -242,7 +297,7 @@
                   <td class="govuk-c-table__cell">McDonalds</td>
                   <td class="govuk-c-table__cell"></td>
                   <td class="govuk-c-table__cell">£5.50</td>
-                  <td style="text-align: center; vertical-align: middle;" class="govuk-c-table__cell"><input type="checkbox" name="name7" />&nbsp; </td>
+                  <td style="text-align: center; vertical-align: middle;" class="govuk-c-table__cell"><label class="container">&nbsp;<input type="checkbox"><span class="checkmark"></span></td>
                 </tr>
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell" id="item">
@@ -273,7 +328,7 @@
                   <td class="govuk-c-table__cell">Odeon Cinema</td>
                   <td class="govuk-c-table__cell"></td>
                   <td class="govuk-c-table__cell">£20.00</td>
-                  <td style="text-align: center; vertical-align: middle;" class="govuk-c-table__cell"><input type="checkbox" name="name8" />&nbsp; </td>
+                  <td style="text-align: center; vertical-align: middle;" class="govuk-c-table__cell"><label class="container">&nbsp;<input type="checkbox"><span class="checkmark"></span></td>
                 </tr>
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell" id="item">
@@ -304,7 +359,7 @@
                   <td class="govuk-c-table__cell">KFC Chicken</td>
                   <td class="govuk-c-table__cell"></td>
                   <td class="govuk-c-table__cell">£34.00</td>
-                  <td style="text-align: center; vertical-align: middle;" class="govuk-c-table__cell"><input type="checkbox" name="name9" />&nbsp; </td>
+                  <td style="text-align: center; vertical-align: middle;" class="govuk-c-table__cell"><label class="container">&nbsp;<input type="checkbox"><span class="checkmark"></span></td>
                 </tr>
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell" id="item">
@@ -335,7 +390,7 @@
                   <td class="govuk-c-table__cell">Payment to Dave</td>
                   <td class="govuk-c-table__cell"></td>
                   <td class="govuk-c-table__cell">£200.00</td>
-                  <td style="text-align: center; vertical-align: middle;" class="govuk-c-table__cell"><input type="checkbox" name="name10" />&nbsp; </td>
+                  <td style="text-align: center; vertical-align: middle;" class="govuk-c-table__cell"><label class="container">&nbsp;<input type="checkbox"><span class="checkmark"></span></td>
                 </tr>
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell" id="item">
@@ -366,7 +421,7 @@
                   <td class="govuk-c-table__cell">Cash machine Withdrawal</td>
                   <td class="govuk-c-table__cell"></td>
                   <td class="govuk-c-table__cell">£120.00</td>
-                  <td style="text-align: center; vertical-align: middle;" class="govuk-c-table__cell"><input type="checkbox" name="name11" />&nbsp; </td>
+                  <td style="text-align: center; vertical-align: middle;" class="govuk-c-table__cell"><label class="container">&nbsp;<input type="checkbox"><span class="checkmark"></span></td>
                 </tr>
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell" id="item">
@@ -397,7 +452,7 @@
                   <td class="govuk-c-table__cell">British Gas</td>
                   <td class="govuk-c-table__cell"></td>
                   <td class="govuk-c-table__cell">£1200.00</td>
-                  <td style="text-align: center; vertical-align: middle;" class="govuk-c-table__cell"><input type="checkbox" name="name12" />&nbsp; </td>
+                  <td style="text-align: center; vertical-align: middle;" class="govuk-c-table__cell"><label class="container">&nbsp;<input type="checkbox"><span class="checkmark"></span></td>
                 </tr>
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell" id="item">
@@ -428,7 +483,7 @@
                   <td class="govuk-c-table__cell">Virgin Media</td>
                   <td class="govuk-c-table__cell"></td>
                   <td class="govuk-c-table__cell">£50.00</td>
-                  <td style="text-align: center; vertical-align: middle;" class="govuk-c-table__cell"><input type="checkbox" name="name13" />&nbsp; </td>
+                  <td style="text-align: center; vertical-align: middle;" class="govuk-c-table__cell"><label class="container">&nbsp;<input type="checkbox"><span class="checkmark"></span></td>
                 </tr>
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell" id="item">
@@ -459,7 +514,7 @@
                   <td class="govuk-c-table__cell">BACS transfer Tyreworld</td>
                   <td class="govuk-c-table__cell">£1800.00</td>
                   <td class="govuk-c-table__cell"></td>
-                  <td style="text-align: center; vertical-align: middle;" class="govuk-c-table__cell"><input type="checkbox" name="name14" />&nbsp; </td>
+                  <td style="text-align: center; vertical-align: middle;" class="govuk-c-table__cell"><label class="container">&nbsp;<input type="checkbox"><span class="checkmark"></span></td>
                 </tr>
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell" id="item">
@@ -490,7 +545,7 @@
                   <td class="govuk-c-table__cell">Tesco Express</td>
                   <td class="govuk-c-table__cell"></td>
                   <td class="govuk-c-table__cell">£8.76</td>
-                  <td style="text-align: center; vertical-align: middle;" class="govuk-c-table__cell"><input type="checkbox" name="name15" />&nbsp; </td>
+                  <td style="text-align: center; vertical-align: middle;" class="govuk-c-table__cell"><label class="container">&nbsp;<input type="checkbox"><span class="checkmark"></span></td>
                 </tr>
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell" id="item">
@@ -521,7 +576,7 @@
                   <td class="govuk-c-table__cell">Thames Water</td>
                   <td class="govuk-c-table__cell"></td>
                   <td class="govuk-c-table__cell">£50.00</td>
-                  <td style="text-align: center; vertical-align: middle;" class="govuk-c-table__cell"><input type="checkbox" name="name16" />&nbsp; </td>
+                  <td style="text-align: center; vertical-align: middle;" class="govuk-c-table__cell"><label class="container">&nbsp;<input type="checkbox"><span class="checkmark"></span></td>
                 </tr>
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell" id="item">
@@ -552,8 +607,8 @@
                   <td class="govuk-c-table__cell">MBNA Credit payment</td>
                   <td class="govuk-c-table__cell"></td>
                   <td class="govuk-c-table__cell">£123.54</td>
-                  <td style="text-align: center; vertical-align: middle;" class="govuk-c-table__cell"><input type="checkbox" name="name17" />&nbsp; </td>
-                </tr>
+                  <td style="text-align: center; vertical-align: middle;" class="govuk-c-table__cell"><label class="container">&nbsp;<input type="checkbox"><span class="checkmark"></span></td>
+               </tr>
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell" id="item">
                     <label for="type"><b>Type:</b></label>
@@ -583,7 +638,7 @@
                   <td class="govuk-c-table__cell">Netflix</td>
                   <td class="govuk-c-table__cell"></td>
                   <td class="govuk-c-table__cell">£15.00</td>
-                  <td style="text-align: center; vertical-align: middle;" class="govuk-c-table__cell"><input type="checkbox" name="name18" />&nbsp; </td>
+                  <td style="text-align: center; vertical-align: middle;" class="govuk-c-table__cell"><label class="container">&nbsp;<input type="checkbox"><span class="checkmark"></span></td>
                 </tr>
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell" id="item">
@@ -614,7 +669,7 @@
                   <td class="govuk-c-table__cell">Spotify</td>
                   <td class="govuk-c-table__cell"></td>
                   <td class="govuk-c-table__cell">£10.40</td>
-                  <td style="text-align: center; vertical-align: middle;" class="govuk-c-table__cell"><input type="checkbox" name="name19" />&nbsp; </td>
+                  <td style="text-align: center; vertical-align: middle;" class="govuk-c-table__cell"><label class="container">&nbsp;<input type="checkbox"><span class="checkmark"></span></td>
                 </tr>
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell" id="item">
@@ -645,7 +700,7 @@
                   <td class="govuk-c-table__cell">Amazon purchase</td>
                   <td class="govuk-c-table__cell"></td>
                   <td class="govuk-c-table__cell">£56.00</td>
-                  <td style="text-align: center; vertical-align: middle;" class="govuk-c-table__cell"><input type="checkbox" name="name20" />&nbsp; </td>
+                  <td style="text-align: center; vertical-align: middle;" class="govuk-c-table__cell"><label class="container">&nbsp;<input type="checkbox"><span class="checkmark"></span></td>
                 </tr>
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell" id="item">
