further copy changes, evidence types, calculations

--- a/app/views/benefits-kind.html
+++ b/app/views/benefits-kind.html
@@ -24,7 +24,7 @@
         </h1>
 
         <p class="govuk-body">
-          Some text here.
+          Do you get benefits from work that are not money - eg company car, luncheon vouchers, or free health insurance?
         </p>
 
         <form class="form" action="/capital-assets" method="post">
