--- a/app/views/capital-assets.html
+++ b/app/views/capital-assets.html
@@ -24,7 +24,14 @@
         </h1>
 
         <p class="govuk-body">
-          Some text here.
+          Do you have any other bank, savings accounts or access to funds? This might include:
+
+          <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+          </ul>
+
         </p>
 
         <form class="form" action="/valuables" method="post">
