--- a/app/views/check-evidence.html
+++ b/app/views/check-evidence.html
@@ -20,10 +20,8 @@
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
         <h1 class="govuk-heading-xl">
-          Check your answers before submission
+          Check your answers before you submit your evidence
         </h1>
-
-        <p class="govuk-body">Some other text here</p>
 
         <form class="form" action="/benefits-kind" method="post">
 
@@ -38,16 +36,24 @@
               </thead>
               <tbody class="govuk-c-table__body">
                 <tr class="govuk-c-table__row">
-                  <th class="govuk-c-table__header" scope="row">Amount</th>
-                  <td class="govuk-c-table__cell ">£1200.00</td>
+                  <th class="govuk-c-table__header" scope="row">Salary or wage</th>
+                  <td class="govuk-c-table__cell ">£1800.00</td>
                 </tr>
                 <tr class="govuk-c-table__row">
-                  <th class="govuk-c-table__header" scope="row">Childcare Costs</th>
-                  <td class="govuk-c-table__cell ">£600.00</td>
+                  <th class="govuk-c-table__header" scope="row">Private pension</th>
+                  <td class="govuk-c-table__cell ">£0.00</td>
                 </tr>
                 <tr class="govuk-c-table__row">
-                  <th class="govuk-c-table__header" scope="row">Miscellaneous Expenditure</th>
-                  <td class="govuk-c-table__cell ">£433.17</td>
+                  <th class="govuk-c-table__header" scope="row">Employer pension</th>
+                  <td class="govuk-c-table__cell ">£0.00</td>
+                </tr>
+                <tr class="govuk-c-table__row">
+                  <th class="govuk-c-table__header" scope="row">Board or rent received</th>
+                  <td class="govuk-c-table__cell ">£0.00</td>
+                </tr>
+                <tr class="govuk-c-table__row">
+                  <th class="govuk-c-table__header" scope="row">Child maintenance received</th>
+                  <td class="govuk-c-table__cell ">£250.00</td>
                 </tr>
               </tbody>
             </table>
@@ -64,15 +70,15 @@
               </thead>
               <tbody class="govuk-c-table__body">
                 <tr class="govuk-c-table__row">
-                  <th class="govuk-c-table__header" scope="row">Salary/Wages</th>
-                  <td class="govuk-c-table__cell ">£1800.00</td>
+                  <th class="govuk-c-table__header" scope="row">Housing costs</th>
+                  <td class="govuk-c-table__cell ">£1200.00</td>
                 </tr>
                 <tr class="govuk-c-table__row">
-                  <th class="govuk-c-table__header" scope="row">Child Support</th>
-                  <td class="govuk-c-table__cell ">£250.00</td>
+                  <th class="govuk-c-table__header" scope="row">Childcare costs</th>
+                  <td class="govuk-c-table__cell ">£600.00</td>
                 </tr>
                 <tr class="govuk-c-table__row">
-                  <th class="govuk-c-table__header" scope="row">Miscellaneous Income</th>
+                  <th class="govuk-c-table__header" scope="row">Child maintenance paid</th>
                   <td class="govuk-c-table__cell ">£0.00</td>
                 </tr>
               </tbody>
