--- a/app/views/dwpdetails.html
+++ b/app/views/dwpdetails.html
@@ -24,6 +24,8 @@
           Enter your National Insurance number and date of birth
         </h1>
 
+        <p class="govuk-body">We need this information to identify you to other government departments.</p>
+
         <form class="form" action="/dwpconf" method="post">
 
           <label class="govuk-c-label" for="national-insurance-number">
