--- a/app/views/means-result.html
+++ b/app/views/means-result.html
@@ -53,22 +53,22 @@
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell">Main dwelling</td>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£0.00</td>
-                  <td class="govuk-c-table__cell"style="text-align:right"><a href="">Outstanding</a></td>
+                  <td class="govuk-c-table__cell"style="text-align:right">N/A</td>
                 </tr>
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell">Additional property</td>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£0.00</td>
-                  <td class="govuk-c-table__cell"style="text-align:right"><a href="">Outstanding</a></td>
+                  <td class="govuk-c-table__cell"style="text-align:right">N/A</td>
                 </tr>
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell">Land</td>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£0.00</td>
-                  <td class="govuk-c-table__cell"style="text-align:right"><a href="">Outstanding</a></td>
+                  <td class="govuk-c-table__cell"style="text-align:right">N/A</td>
                 </tr>
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell">Timeshare</td>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£0.00</td>
-                  <td class="govuk-c-table__cell"style="text-align:right"><a href="">Outstanding</a></td>
+                  <td class="govuk-c-table__cell"style="text-align:right">N/A</td>
                 </tr>
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell">Bank accounts</td>
@@ -77,17 +77,17 @@
                 </tr>
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell">Third-party bank accounts</td>
-                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£1400.00</td>
-                  <td class="govuk-c-table__cell"style="text-align:right"><a href="">Verified</a></td>
+                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£0.00</td>
+                  <td class="govuk-c-table__cell"style="text-align:right">N/A</td>
                 </tr>
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell">Investments</td>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£0.00</td>
-                  <td class="govuk-c-table__cell"style="text-align:right"><a href="">Verified</a></td>
+                  <td class="govuk-c-table__cell"style="text-align:right">N/A</td>
                 </tr>
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell">Other savings</td>
-                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£0.00</td>
+                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£1400.00</td>
                   <td class="govuk-c-table__cell" style="text-align:right"><a href="">Verified</a></td>
                 </tr>
                 <tr class="govuk-c-table__row">
