--- a/app/views/obbank.html
+++ b/app/views/obbank.html
@@ -285,7 +285,7 @@
         <br>
         <h4>Your memorable data</h4>
         <br>
-        <text>Please enter the following characters from your memorable word:</text>
+        <text>Enter the 2nd, 6th and 12th letters from your memorable word</text>
         <br>
         <br>
         <div class="block">
@@ -321,7 +321,7 @@
         <br>
         <p>Before you authorise, be aware of the following information</p>
         <ul>
-          <li>The Ministry of Justice will use this data to support your application for Legal Aid</li>
+          <li>The Ministry of Justice will only use this data to support your application for Legal Aid</li>
           <li>Your data won't be used for any other purpose</li>
           <li>Your data will be kept for no longer than 3 months</li>
         </ul>
