--- a/app/views/obconsent.html
+++ b/app/views/obconsent.html
@@ -24,25 +24,29 @@
           <div class="govuk-c-checkboxes">
             <fieldset class="govuk-c-fieldset">
               <legend class="govuk-c-fieldset__legend">
-                <h1 class="govuk-heading-xl">Consent to the following requests for information</h1>
-                <span class="govuk-c-fieldset__hint">If you consent, please tick the checkboxes</span>
+                <h1 class="govuk-heading-xl">Can we collect evidence on your behalf?</h1>
               </legend>
 
-              <p class="govuk-body">Blurb about safety, ease and the different sources to consent to:</p>
+              <p class="govuk-body">To help provide evidence we need access to:</p>
 
-              <div class="govuk-heading-m"><img src="public/images/padlock.png" alt="padlock" height="42" width="42" style="vertical-align: middle"> Open banking</div>
+              <ul>
+                <li>your bank or building society account</li>
+                <li>your tax information</li>
+              </ul>
 
-              <p class="govuk-body">What open banking is really briefly, why it’s safe and how this is better than sourcing manual evidence.</p>
+              <div class="govuk-heading-m"><img src="public/images/padlock.png" alt="padlock" height="42" width="42" style="vertical-align: middle"> Your bank account</div>
+
+              <p class="govuk-body">We'll only connect to your bank or building society for applying for Legal Aid.</p>
 
               <div class="govuk-c-checkboxes__item">
                 <input class="govuk-c-checkboxes__input" id="open-banking" name="open-banking" type="checkbox">
 
                 <label class="govuk-c-label govuk-c-checkboxes__label" for="open-banking">
-                  The Legal Aid Agency can access the following account information from my accounts held at my bank/building society.
+                  The Legal Aid Agency can access my bank or building society account
                 </label>
 
                 <details>
-                  <summary style="text-decoration: underline; color: #0000EE;"><span class="summary" style="text-decoration: underline; color: #0000EE;">Your account details</span></summary>
+                  <summary style="text-decoration: underline; color: #0000EE;"><span class="summary" style="text-decoration: underline; color: #0000EE;">Account details - Used to work out your overall financial situation (capital assets)</span></summary>
                   <div class="panel panel-border-narrow">
                     <p class="govuk-body">
                       Some text about account details.
@@ -53,7 +57,7 @@
                   </div>
                 </details>
                 <details>
-                  <summary style="text-decoration: underline; color: #0000EE;"><span class="summary" style="text-decoration: underline; color: #0000EE;">Your transactions for the past 3 months</span></summary>
+                  <summary style="text-decoration: underline; color: #0000EE;"><span class="summary" style="text-decoration: underline; color: #0000EE;">3 months transaction history - Used to work out your incoming and outgoing money</span></summary>
                   <div class="panel panel-border-narrow">
                     <p class="govuk-body">
                       Some text about transactions.
@@ -88,7 +92,7 @@
                   </div>
                 </details>
                 <details>
-                  <summary style="text-decoration: underline; color: #0000EE;"><span class="summary">DWP: In receipt of passported benefits</span></summary>
+                  <summary style="text-decoration: underline; color: #0000EE;"><span class="summary">DWP: Receipt of passported benefits</span></summary>
                   <div class="panel panel-border-narrow">
                     <p class="govuk-body">
                       Some text about DWP.
